--- a/programs/test.tt
+++ b/programs/test.tt
@@ -449,8 +449,8 @@ function testload() {
 	let err = 0;
 	try { call $load( 0 ); } catch err {}
 	call assert( err, ${-} );
-	let str = $load( "programs/test.tt" );
-	call assert( =( $len( str ) $flen( "programs/test.tt" ) ), ${-} );
+	let str = $load( $src );
+	call assert( =( $len( str ) $flen( $src ) ), ${-} );
 	call assert( >( $chr( str 0 ) 0 ), ${-} );
 }
 
@@ -461,7 +461,7 @@ function testflen() {
 	let err = 0;
 	try { call $load( 0 ); } catch err {}
 	call assert( err, ${-} );
-	call assert( =( $len( $load( "programs/test.tt" ) ) $flen( "programs/test.tt" ) ), ${-} );
+	call assert( =( $len( $load( $src ) ) $flen( $src ) ), ${-} );
 }
 
 function testargc() {
@@ -475,7 +475,7 @@ function testargv() {
 	let err = 0;
 	try { call $argv( -1 ); } catch err {}
 	call assert( err, ${-} );
-	call assert( =( $cmp( $argv( 0 ) "programs/test.tt" ) 0 ), ${-} );
+	call assert( =( $cmp( $argv( 0 ) $src ) 0 ), ${-} );
 }
 
 function testtime() {
@@ -489,7 +489,7 @@ function testparse() {
 	let err = 0;
 	try { call $parse( 0 ); } catch err {}
 	call assert( err, ${-} );
-	let elem = $parse( $load( "programs/test.tt" ) );
+	let elem = $parse( $load( $src ) );
 	call assert( =( $cmp( elem "rem" ) 0 ), ${-} );
 	call assert( =( $cmp( $child( $next( elem ) ) "Test" ) 0 ), ${-} );
 }
@@ -600,6 +600,10 @@ function testeq() {
 	call assert( =( $eq( "a" "aa" ) 0 ), ${-} );
 }
 
+function testsrc() {
+	call assert( $eq( $sub( $src, -( $len( $src ) 7 ), 7 ) "test.tt" ), ${-} );
+}
+
 program test {
 	call hello();
 	call assert( =( testvoid() 0 ), ${-} );
@@ -622,6 +626,7 @@ program test {
 	call testint();
 	call testlen();
 	call testtup();
+	call testsrc();
 	call testload();
 	call testflen();
 	call testargc();
