--- a/programs/test.tt
+++ b/programs/test.tt
@@ -7,7 +7,7 @@ const STR = "*";
 const CAT = $str( "*" "*" );
 const ELE = ${ ( * ) };
 
-global g, g1 = 1;
+global g, g1 = 1, g2 = +( g1 1 );
 array a, a1 = $array( 1 );
 
 struct struc {
@@ -44,6 +44,7 @@ function testvars( x ) {
 	call assert( =( y x ), ${-} );
 	call assert( =( g 0 ), ${-} );
 	call assert( =( g1 1 ), ${-} );
+	call assert( =( g2 2 ), ${-} );
 	call setg( y );
 	call assert( =( g x ), ${-} );
 	call assert( =( TRUE 1 ), ${-} );
