--- a/programs/test.tt
+++ b/programs/test.tt
@@ -39,9 +39,9 @@ function testvoid() {
 }
 
 function testvars( x ) {
-	var y;
-	let y = x;
+	var y = x, z = +( y 1 );
 	call assert( =( y x ), ${-} );
+	call assert( =( z +( x 1 ) ), ${-} );
 	call assert( =( g 0 ), ${-} );
 	call assert( =( g1 1 ), ${-} );
 	call assert( =( g2 2 ), ${-} );
@@ -184,6 +184,16 @@ function testwhile() {
 		return 0;
 		call assert( FALSE, ${-} );
 	}
+	var off, end = 10;
+	while <( off end ) {
+		var aaa, bbb = 0;
+		inc aaa;
+		inc bbb;
+		inc off;
+	}
+	call assert( =( off 10 ), ${-} );
+	call assert( =( aaa 10 ), ${-} );
+	call assert( =( bbb 1 ), ${-} );
 }
 
 function testtry() {
