--- a/programs/test.tt
+++ b/programs/test.tt
@@ -8,7 +8,7 @@ const CAT = $str( "*" "*" );
 const ELE = ${ ( * ) };
 
 global g, g1 = 1, g2 = +( g1 1 );
-array a, a1 = $array( 1 );
+array a, a1 = $array( 1 ), [ a2 g2 ] [ a3 ${ 1, 2, 3 } ];
 
 struct struc {
 	a,b,c,d,e;
@@ -69,6 +69,8 @@ function testarray() {
 	call assert( err, ${-} );
 	call assert( =( $len( a ) 0 ), ${-} );
 	call assert( =( $len( a1 ) 1 ), ${-} );
+	call assert( =( $len( a2 ) 2 ), ${-} );
+	call assert( =( $len( a3 ) 3 ), ${-} );
 	dim [ a 3 ];
 	set [ a 0 ] = "a";
 	set [ a 1 ] = 1;
