--- a/programs/test.tt
+++ b/programs/test.tt
@@ -697,6 +697,37 @@ function testdec() {
 	call assert( =( int -1 ), ${-} );
 }
 
+function testelem() {
+	var err;
+	try { call $elem( except( ${ 1 } ), 0, 0 ); } catch err {}
+	call assert( =( $cmp( $str( err ) "1" ) 0 ), ${-} );
+	let err = 0;
+	try { call $elem( 1, 0, 0 ); } catch err {}
+	call assert( =( err 1 ), ${-} );
+	let err = 0;
+	try { call $elem( ${-}, except( ${ 2 } ), 0 ); } catch err {}
+	call assert( =( $cmp( $str( err ) "2" ) 0 ), ${-} );
+	let err = 0;
+	try { call $elem( ${-}, 2, 0 ); } catch err {}
+	call assert( =( err 2 ), ${-} );
+	let err = 0;
+	try { call $elem( ${-}, 0, except( ${ 3 } ) ); } catch err {}
+	call assert( =( $cmp( $str( err ) "3" ) 0 ), ${-} );
+	let err = 0;
+	try { call $elem( ${-}, 0, 3 ); } catch err {}
+	call assert( =( err 3 ), ${-} );
+	call assert( =( $cmp( $elem( ${ 1 }, 0, 0 ) "1" ) 0 ), ${-} );
+	let err = 0;
+	try { call $elem( ${-}, ${ 2 }, 0 ); } catch err {}
+	call assert( err, ${-} );
+	call assert( =( $cmp( $child( $elem( ${()}, ${ 2 }, 0 ) ) "2" ) 0 ), ${-} );
+	call assert( =( $cmp( $child( $elem( ${[]}, ${ 2 }, 0 ) ) "2" ) 0 ), ${-} );
+	call assert( =( $cmp( $child( $elem( ${{}}, ${ 2 }, 0 ) ) "2" ) 0 ), ${-} );
+	call assert( =( $cmp( $child( $elem( ${{}}, $elem( ${ 2 }, 0, 0 ), 0 ) ) "2" ) 0 ), ${-} );
+	call assert( =( $cmp( $next( $elem( ${ 1 }, 0, ${ 3 } ) ) "3" ) 0 ), ${-} );
+	call assert( =( $cmp( $next( $elem( ${ 1 }, 0, $elem( ${ 3 }, 0, 0 ) ) ) "3" ) 0 ), ${-} );
+}
+
 program test {
 	call hello();
 	call assert( =( testvoid() 0 ), ${-} );
@@ -740,5 +771,6 @@ program test {
 	call testinterrupted();
 	call testinc();
 	call testdec();
+	call testelem();
 	print "Tests passed.";
 }
