--- a/programs/test.tt
+++ b/programs/test.tt
@@ -740,6 +740,24 @@ function testelem() {
 	call assert( =( $cmp( $next( $elem( ${ 1 }, 0, $elem( ${ 3 }, 0, 0 ) ) ) "3" ) 0 ), ${-} );
 }
 
+function testvalues() {
+	var err, arr;
+	try { call $values( except( ${ 1 } ) ); } catch err {}
+	call assert( =( $cmp( $str( err ) "1" ) 0 ), ${-} );
+	let err = 0;
+	try { call $values( 0 ); } catch err {}
+	call assert( err, ${-} );
+	let err = 0;
+	try { call $values( $array( 0 ) ); } catch err {}
+	call assert( err, ${-} );
+	let arr = $array( $parse( $unparse( $values( $array( ${ 0 1 "2" $tup( "Three" 3 ) ${ [4] } } ) ) ) ) );
+	call assert( =( [ arr 0 ] 0 ), ${-} );
+	call assert( =( [ arr 1 ] 1 ), ${-} );
+	call assert( =( $cmp( [ arr 2 ] "2" ) 0 ), ${-} );
+	call assert( =( $cmp( [ arr 3 ] $tup( "Three" 3 ) ) 0 ), ${-} );
+	call assert( =( $cmp( $child( [ arr 4 ] ) "4" ) 0 ), ${-} );
+}
+
 program test {
 	call hello();
 	call assert( =( testvoid() 0 ), ${-} );
@@ -785,5 +803,6 @@ program test {
 	call testinterrupted();
 	call testinc();
 	call testdec();
+	call testvalues();
 	print "Tests passed.";
 }
