--- a/programs/test.tt
+++ b/programs/test.tt
@@ -86,7 +86,7 @@ function testarray() {
 	dim [ a 1 ];
 	call assert( =( $cmp( [ a 0 ] "a" ) 0 ), ${-} );
 	let a = $array( ${ 0, $str( "\"one" "\"" ), $tup( "\\two\\"2 ), "\063", ${ four(4) }, 84, 84 } );
-	let a = $array( $parse( $astr( a ) ) );
+	let a = $array( $parse( $unparse( $values( a ) ) ) );
 	call assert( =( $len( a ) 7 ), ${-} );
 	call assert( =( [ a 0 ] 0 ), ${-} );
 	call assert( =( $cmp( [ a 1 ] "\"one\"" ) 0 ), ${-} );
