--- a/programs/test.tt
+++ b/programs/test.tt
@@ -768,6 +768,26 @@ function testvalues() {
 	call assert( =( $cmp( $child( [ arr 4 ] ) "4" ) 0 ), ${-} );
 }
 
+function testfunction() {
+	var err;
+	try { call $function( 0 ); } catch err {}
+	call assert( err, ${-} );
+	let err = 0;
+	try { call :( $function( ${ x } ) ); } catch err {}
+	call assert( err, ${-} );
+	let err = 0;
+	try { call :( $function( ${ ( 1 ){ } } ) ); } catch err {}
+	call assert( err, ${-} );
+	let err = 0;
+	try { call :( $function( ${ (){ x } } ) ); } catch err {}
+	call assert( err, ${-} );
+	let err = 0;
+	call assert( =( :(
+		$function( ${ () { 
+			return :( $function( $parse( "( param ) { return param; }" ) ) ONE );
+		} } ) ) ONE ), ${-} );
+}
+
 program test {
 	call hello();
 	call assert( =( testvoid() 0 ), ${-} );
@@ -814,5 +834,6 @@ program test {
 	call testinc();
 	call testdec();
 	call testvalues();
+	call testfunction();
 	print "Tests passed.";
 }
